--- a/public/css/chatify/style.css
+++ b/public/css/chatify/style.css
@@ -1,9 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
 html,
 body {
   margin: 0;
   padding: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 :root {
@@ -103,7 +103,7 @@ body {
   display: inline-flex;
   width: 100%;
   height: 100%;
-  font-family: sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 .messenger-listView {
   display: flex;
@@ -585,7 +585,7 @@ body {
   outline: none;
   resize: none;
   background: transparent;
-  font-family: sans-serif;
+  font-family: 'Poppins', sans-serif;
   height: 44px;
   max-height: 200px;
 }
